app-test/testdata/typesystem/neg/type-assertion-algebraic-type-to-any/check/assert.check
Error in "testdata/typesystem/neg/type-assertion-algebraic-type-to-any/src/assert.cal" on line 5:
            OUT <-- (T(1, false) :: int); // error
                    ^^^^^^^^^^^^^^^^^^^^
Cannot type assert T to int.